--- a/app/src/view-settings.html
+++ b/app/src/view-settings.html
@@ -22,6 +22,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="homecon-edit-dialog.html">
 <link rel="import" href="homecon-components.html">
 <link rel="import" href="homecon-actions.html">
+<link rel="import" href="homecon-systemidentification.html">
 
 <dom-module id="view-settings">
 
@@ -133,6 +134,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <homecon-actions id="actions" actions="{{actions}}"></homecon-actions>
             </paper-material>
 
+            <paper-material>
+                <h1>System Identification</h1>
+                <homecon-systemidentification id="systemidentification"></homecon-systemidentification>
+            </paper-material>
+
 
         </homecon-page>
 
@@ -168,6 +174,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             load: function(){
                 this.$.components.load()
                 this.$.actions.load()
+                this.$.systemidentification.load()
             }
 
         });
