--- a/app/src/widgets/highcharts-behavior.html
+++ b/app/src/widgets/highcharts-behavior.html
@@ -255,7 +255,7 @@
             var chart = Highcharts.chart(container, {
                 chart: {
                     type: 'line',
-                    zoomType: 'x',
+                    zoomType: 'xy',
                 },
                 title: {
                     text: 'The title',
