--- a/app/src/view-settings.html
+++ b/app/src/view-settings.html
@@ -85,14 +85,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-material>
 
                 <h1>Weather</h1>
-                <homecon-web-socket-object auto event="state" path="settings/weather/service" data="{{weatherservice}}" debounce="800"></homecon-web-socket-object>
+                <homecon-web-socket-object auto event="state" path="settings/weather/service" data="{{weatherservice}}" debounce="800" send-on-authenticated></homecon-web-socket-object>
                 <paper-dropdown-menu label="service">
                     <paper-menu class="dropdown-content" attr-for-selected="value" selected="{{weatherservice}}">
                         <paper-item value="darksky">darksky.net</paper-item>
                     </paper-menu>
                 </paper-dropdown-menu>
                 
-                <homecon-web-socket-object auto event="state" path="settings/weather/apikey" data="{{weatherapikey}}" debounce="800"></homecon-web-socket-object>
+                <homecon-web-socket-object auto event="state" path="settings/weather/apikey" data="{{weatherapikey}}" debounce="800" send-on-authenticated></homecon-web-socket-object>
                 <paper-input label="API key" value="{{weatherapikey}}"></paper-input>
 
             </paper-material>
