--- a/app/src/plugins/systemidentification-settings.html
+++ b/app/src/plugins/systemidentification-settings.html
@@ -1,18 +1,18 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/paper-material/paper-material.html">
-<link rel="import" href="../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-material/paper-material.html">
+<link rel="import" href="../../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 
-<link rel="import" href="homecon-web-socket-object.html">
-<link rel="import" href="homecon-web-socket-sender.html">
-<link rel="import" href="homecon-edit-dialog.html">
-<link rel="import" href="homecon-section.html">
-<link rel="import" href="widgets/highcharts-behavior.html">
-<link rel="import" href="widgets/homecon-widget-button.html">
+<link rel="import" href="../homecon-web-socket-object.html">
+<link rel="import" href="../homecon-web-socket-sender.html">
+<link rel="import" href="../homecon-edit-dialog.html">
+<link rel="import" href="../homecon-section.html">
+<link rel="import" href="../widgets/highcharts-behavior.html">
+<link rel="import" href="../widgets/homecon-widget-button.html">
 
-<dom-module id="homecon-systemidentification">
+<dom-module id="systemidentification-settings">
 
     <template>
 
@@ -34,9 +34,9 @@
         </style>
 
 
-        <homecon-web-socket-object id="websocketModelsList" event="list_models" path="" data="{{models}}"></homecon-web-socket-object>
+        <homecon-web-socket-object id="websocketModelsList" event="list_models" path="" data="{{models}}" send-on-authenticated></homecon-web-socket-object>
         <homecon-web-socket-object id="websocketModel" event="state" path="systemidentification/model" data="{{model}}" auto></homecon-web-socket-object>
-        <homecon-web-socket-object id="websocketCrossvalidationResult" event="state" path="systemidentification/validation/result" data="{{crossvalidationResult}}" on-change="_crossvalidationResultChanged"></homecon-web-socket-object>
+        <homecon-web-socket-object id="websocketCrossvalidationResult" event="state" path="systemidentification/validation/result" data="{{crossvalidationResult}}" on-change="_crossvalidationResultChanged" send-on-authenticated></homecon-web-socket-object>
         
         <paper-dropdown-menu class="model-select" label="Model">
             <paper-menu class="dropdown-content" attr-for-selected="value" selected="{{model}}">
@@ -65,7 +65,7 @@
 
     <script>
         Polymer({
-            is: 'homecon-systemidentification',
+            is: 'systemidentification-settings',
             behaviors: [HighchartsBehavior],
             properties: {
             },
@@ -162,13 +162,6 @@
 
                 this.rmse = Math.round(data['fitquality']['rmse']*1000)/1000
                 this.maxError = Math.round(data['fitquality']['max_error']*1000)/1000
-            },
-
-
-            load: function(){
-                this.$.websocketCrossvalidationResult.send();
-                this.$.websocketModelsList.send();
-                this.$.websocketModel.send();
             },
 
         });
